fix: std home overflow

--- a/frontend/student/home.css
+++ b/frontend/student/home.css
@@ -5,7 +5,8 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 /* Top bar */
